--- a/views/index.html
+++ b/views/index.html
@@ -94,55 +94,215 @@
                   <li><a href="productlist.html">笔记本膜</a></li>
                   <li><a href="productlist.html">笔记本清洁</a></li>
                 </ul>
-                  <h4>笔记本</h4>
+                  <h4>台式电脑</h4>
                 <ul>
-                  <li><a href="#">笔记本电脑</a></li>
-                  <li><a href="#">笔记本电池</a></li>
-                  <li><a href="#">笔记本包</a></li>
-                  <li><a href="#">笔记本支架</a></li>
-                  <li><a href="#">笔记本膜</a></li>
-                  <li><a href="#">笔记本清洁</a></li>
+                  <li><a href="productlist.html">台式电脑</a></li>
+                  <li><a href="productlist.html">一体机</a></li>
+                  <li><a href="productlist.html">工作站</a></li>
+                  <li><a href="productlist.html">电脑工具</a></li>
+                  <li><a href="productlist.html">迷你台式电脑</a></li>
                 </ul>
               </div></li>
               <li><span class="iconfont icon-icon-test"><a href="#">办公打印 / 投影 / 监控 / 软件</a>
               <div class="conionfo">
                 <h4>笔记本</h4>
                 <ul>
-                  <li><a href="#">笔记本电脑</a></li>
-                  <li><a href="#">笔记本电池</a></li>
-                  <li><a href="#">笔记本包</a></li>
-                  <li><a href="#">笔记本支架</a></li>
-                  <li><a href="#">笔记本膜</a></li>
-                  <li><a href="#">笔记本清洁</a></li>
+                  <li><a href="productlist.html">笔记本电脑</a></li>
+                  <li><a href="productlist.html">笔记本电池</a></li>
+                  <li><a href="productlist.html">笔记本包</a></li>
+                  <li><a href="productlist.html">笔记本支架</a></li>
+                  <li><a href="productlist.html">笔记本膜</a></li>
+                  <li><a href="productlist.html">笔记本清洁</a></li>
                 </ul>
-                  <h4>笔记本</h4>
+                  <h4>台式电脑</h4>
                 <ul>
-                  <li><a href="#">笔记本电脑</a></li>
-                  <li><a href="#">笔记本电池</a></li>
-                  <li><a href="#">笔记本包</a></li>
-                  <li><a href="#">笔记本支架</a></li>
-                  <li><a href="#">笔记本膜</a></li>
-                  <li><a href="#">笔记本清洁</a></li>
+                  <li><a href="productlist.html">台式电脑</a></li>
+                  <li><a href="productlist.html">一体机</a></li>
+                  <li><a href="productlist.html">工作站</a></li>
+                  <li><a href="productlist.html">电脑工具</a></li>
+                  <li><a href="productlist.html">迷你台式电脑</a></li>
                 </ul>
               </div></li>
               <li><span class="iconfont icon-chuifengji"><a href="#">厨卫电器 / 小家电 / 生活家电</a>
-              <div class="conionfo"></div></li>
+              <div class="conionfo">
+                <h4>笔记本</h4>
+                <ul>
+                  <li><a href="productlist.html">笔记本电脑</a></li>
+                  <li><a href="productlist.html">笔记本电池</a></li>
+                  <li><a href="productlist.html">笔记本包</a></li>
+                  <li><a href="productlist.html">笔记本支架</a></li>
+                  <li><a href="productlist.html">笔记本膜</a></li>
+                  <li><a href="productlist.html">笔记本清洁</a></li>
+                </ul>
+                  <h4>台式电脑</h4>
+                <ul>
+                  <li><a href="productlist.html">台式电脑</a></li>
+                  <li><a href="productlist.html">一体机</a></li>
+                  <li><a href="productlist.html">工作站</a></li>
+                  <li><a href="productlist.html">电脑工具</a></li>
+                  <li><a href="productlist.html">迷你台式电脑</a></li>
+                </ul>
+              </div></li>
               <li><span class="iconfont icon-chufangdianqi"><a href="#">大家电 / 影音电视 / 游戏机</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-shouji"><a href="#">手机 / 智能手机 / 通讯产品</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-MP-xian"><a href="#">数码产品 / MP3 / 移动电源</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-shuma-danfan"><a href="#">数码相机 / 单反 / 数码摄像机</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-xinpian"><a href="#">服务器 / 网络 / 无线 / 布线</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-xingzhuang"><a href="#">DIY硬件 / 外设 / 模拟攒机</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-pingbandiannao-"><a href="#">平板电脑 / 智能穿戴 / 智能家居</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
               <li><span class="iconfont icon-qiche"><a href="#">汽车电子 / 电动车 / 代步出行</a>
-                <div class="conionfo"></div></li>
+                <div class="conionfo">
+                  <h4>笔记本</h4>
+                  <ul>
+                    <li><a href="productlist.html">笔记本电脑</a></li>
+                    <li><a href="productlist.html">笔记本电池</a></li>
+                    <li><a href="productlist.html">笔记本包</a></li>
+                    <li><a href="productlist.html">笔记本支架</a></li>
+                    <li><a href="productlist.html">笔记本膜</a></li>
+                    <li><a href="productlist.html">笔记本清洁</a></li>
+                  </ul>
+                    <h4>台式电脑</h4>
+                  <ul>
+                    <li><a href="productlist.html">台式电脑</a></li>
+                    <li><a href="productlist.html">一体机</a></li>
+                    <li><a href="productlist.html">工作站</a></li>
+                    <li><a href="productlist.html">电脑工具</a></li>
+                    <li><a href="productlist.html">迷你台式电脑</a></li>
+                  </ul>
+                </div></li>
             </ul>
           </div>
           <div class="content_middle">
