--- a/views/particulars.html
+++ b/views/particulars.html
@@ -38,7 +38,7 @@
          <div class="mycart">
            <span class="iconfont icon-huaban5"></span>
            <span class="cartnum">1</span>
-           <a href="#">我的购物车</a>
+           <a href="shopcart.html">我的购物车</a>
          </div>
 
          <div class="gzcard">
@@ -101,7 +101,12 @@
                 <span>价格：</span>
                 <span>$789789</span>
               </div>
-              <div class="num"><p>数量：</p><p>-</p><p>1</p><p>+</p></div>
+              <div class="num">
+                <p>数量：</p>
+                <p class="subnum">-</p>
+                <p class="num">1</p>
+                <p class="addnum">+</p>
+              </div>
               <div class="addcart" id="clis">加入购物车</div>
           </div>
         </div>
@@ -109,11 +114,24 @@
           <div class="hotgood">
             <div class="hottit">
               <p>热门商品</p>
+             
             </div>
+            <ul class="hotjosn">
+              <li>
+                <img src="https://mercrt-fd.zol-img.com.cn/t_s400x400/g5/M00/0E/07/ChMkJ13guBiIG9BQAACqDNNF39UAAvfIACscQgAAKok329.jpg">
+                <p class="hotname">联想口红便携电源适配器65W</p>
+                <p class="hotprice">￥199.00</p>
+              </li>
+              <li>
+                <img src="https://mercrt-fd.zol-img.com.cn/t_s400x400/g5/M00/0E/07/ChMkJ13guBiIG9BQAACqDNNF39UAAvfIACscQgAAKok329.jpg">
+                <p class="hotname">联想口红便携电源适配器65W</p>
+                <p class="hotprice">￥199.00</p>
+              </li>
+            </ul>
           </div>
           <div class="goodint">
             <p class="int">商品介绍</p>
-            <p>基本参数</p>
+            <p class="basic">基本参数</p>
             <ul class="settings">
               
               <li><p class="name">屏幕尺寸</p><p class="set">14寸 1600*900</p></li>
