--- a/views/productlist.html
+++ b/views/productlist.html
@@ -42,7 +42,7 @@
          <div class="mycart">
            <span class="iconfont icon-huaban5"></span>
            <span class="cartnum">1</span>
-           <a href="#">我的购物车</a>
+           <a href="shopcart.html">我的购物车</a>
          </div>
 
          <div class="gzcard">
@@ -140,9 +140,9 @@
 
         <div class="orderby">
           <ul>
-            <li class="taborder"><a href="#">默认</a></li>
-            <li><a href="#">价格由高到低</a></li>
-            <li><a href="#">价格由低到高</a></li>
+            <li class="taborder orderbydef"><a href="#">默认</a></li>
+            <li class="orderbyheight"><a href="#">价格由高到低</a></li>
+            <li class="orderbylow"><a href="#">价格由低到高</a></li>
           </ul>
         </div>
 
