更改购物车样式1.1

--- a/views/particulars.html
+++ b/views/particulars.html
@@ -79,8 +79,8 @@
 
       <div class="message">
         <div class="hosurl">
-          <a href="#">首页</a>>
-          <a href="#">笔记本</a>
+          <a href="index.html">首页</a>>
+          <a href="productlist.html">笔记本</a>
         </div>
         <div class="goodinfo"> 
           <div class="goodleft">
