--- a/style/shopcart.scss
+++ b/style/shopcart.scss
@@ -284,16 +284,18 @@
     }
     p{
       float: left;
-      margin-top: 30px;   
+      margin-top: 30px;  
+      width: 200px;
+      text-align: center;
     }
     :nth-child(2){
       margin-left: 10px;
     }
     :nth-child(3){
-      margin-left: 100px;
+      margin-left: 77px;
     }
     :nth-child(4){
-      margin-left: 170px;
+      margin-left: 100px;
         width: 20px;
         height: 20px;
         line-height: 20px;
@@ -317,12 +319,14 @@
         cursor: pointer;
     }
     :nth-child(7){
-     margin-left: 170px;
-     width: 80px;
+     margin-left: 130px;
+     width: 100px;
+     text-align: center;
     }
     :nth-child(8){
-      margin-left: 160px;
+      margin-left: 10px;
       cursor: pointer;
+      text-align: right;
      }
   }
 }
